<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/_8cafeportrait"
    android:backgroundTint="#80E3E3E3"
    android:backgroundTintMode="src_over">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cafename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/abril_fatface"
                android:gravity="center_horizontal"
                android:text="@string/cafename"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/welcomemsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:gravity="center_horizontal"
                android:text="@string/reservation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/foodimage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/catkin_by_huishan_goreng_pisang"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/editname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/mobile"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/editmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:digits="1234567890"
                    android:ems="10"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textpax"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/paxno"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/editpaxno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:digits="1234567890"
                    android:ems="10"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/textdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <DatePicker
                    android:id="@+id/datepicker"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/black"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/texttime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/black"
                    android:timePickerMode="spinner"
                    android:calendarViewShown="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/textseat"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/seat"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkblue"
                    android:backgroundTint="@color/blue"
                    android:layout_weight="1"
                    android:textOff="@string/nonsmoke"
                    android:textOn="@string/smoke"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/btnsubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/lightgreen"
                    android:textColor="@color/green"
                    android:layout_marginRight="5dp"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/btnreset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/lightred"
                    android:textColor="@color/red"
                    android:layout_marginLeft="5dp"
                    android:text="@string/reset" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
